--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechCon 2024</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-    <!-- Header -->
+    <!-- Header Section -->
     <header>
         <h1>TechCon 2024</h1>
         <nav>
@@ -24,12 +24,15 @@
     <main>
         <section>
             <h2>Welcome to TechCon 2024</h2>
-            <p>TechCon 2024 brings together the brightest minds in technology for a three-day event full of inspiring talks, workshops, and networking opportunities.</p>
+            <p>
+                Join us for TechCon 2024 — a premier conference where technology leaders, developers, and enthusiasts
+                gather to explore the future of innovation, share ideas, and network with industry pioneers.
+            </p>
 
             <!-- Embedded Video -->
-            <video controls width="640" aria-label="Promotional video for TechCon 2024">
-                <source src="promo.mp4" type="video/mp4">
-                <track src="promo-subtitles.vtt" kind="subtitles" srclang="en" label="English">
+            <video controls width="640" aria-label="TechCon 2024 promotional video">
+                <source src="https://www.youtube.com/watch?v=WQQ2kGc6XTg" type="video/mp4">
+                <track src="promo-subtitles.vtt" kind="subtitles" srclang="en" label="English subtitles">
                 Your browser does not support the video tag.
             </video>
         </section>
@@ -37,7 +40,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; TechCon 2024. All rights reserved.</p>
+        <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
     </footer>
 
 </body>
