--- a/schedule.html
+++ b/schedule.html
@@ -22,16 +22,16 @@
 
     <!-- Main Content -->
     <main>
-        
+        <section>
             <table>
                 <caption>Detailed Schedule of Events for TechCon 2024</caption>
-                <thead>
+                <th>
                     <tr>
                         <th scope="col">Time</th>
                         <th scope="col">Session</th>
                         <th scope="col">Speaker</th>
                     </tr>
-                </thead>
+                </th>
                 <tbody>
                     <tr>
                         <td>09:00 AM – 10:00 AM</td>
@@ -65,7 +65,7 @@
                     </tr>
                 </tbody>
             </table>
-        
+        </section>
     </main>
 
     <!-- Footer -->
