--- a/schedule.html
+++ b/schedule.html
@@ -23,7 +23,7 @@
     <!-- Main Content -->
     <main>
         <section>
-            <table>
+            <table border="1">
                 <caption>Detailed Schedule of Events for TechCon 2024</caption>
                 <th>
                     <tr>
