--- a/schedule.html
+++ b/schedule.html
@@ -23,15 +23,15 @@
     <!-- Main Content -->
     <main>
         <section>
-            <table border="1">
+            <table>
                 <caption>Detailed Schedule of Events for TechCon 2024</caption>
-                <th>
+                <thead>
                     <tr>
                         <th scope="col">Time</th>
                         <th scope="col">Session</th>
                         <th scope="col">Speaker</th>
                     </tr>
-                </th>
+                </thead>
                 <tbody>
                     <tr>
                         <td>09:00 AM – 10:00 AM</td>
