--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -23,7 +23,7 @@
     <!-- Main Content -->
     <main>
         <section>
-            <table border="1">
+            <table>
                 <caption>Detailed Schedule of Events for TechCon 2024</caption>
                 <thead>
                     <tr>
@@ -70,7 +70,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
+        <p>&copy; 2024 TechCon. All rights reserved. copyright.</p>
     </footer>
 
 </body>
